# RIP

./: .env.example  .gitignore  AGENT_BUILD_PROMPT.md  CLAUDE.md  CODEX.md  CONTEXT_GATEWAY_BUILD_PROMPT.md  CONTINUE_PROMPT.md  HOW_TO_USE_MCPS_IN_MOBILE_APP.md  MANIFEST.in  MCP_WORKFLOW_DEEP_DIVE.md  Makefile  PyPI-Recovery-Codes-pratik.rip-2026-07-01T15_52_55.442502.txt  README.md  REPLAN_V2_AUDIT.md  RIP_Emergent_Ventures_Application.docx  RIP_FULL_AUDIT_AND_WORKFLOW.md  RIP_REMOTE_GIT_FLUTTER_PLAN.md  TASK.md  User_distribution_plan.md  affected.md  alembic.ini  ana.md  check_health.py  cli.md  copy.txt  debug_list_projects.py  debug_projects_error.py  docker-compose.yml  fix.ps1  fix_block.sql  funding.json  gateway.env  gateway_api_flow.md  index.txt  insert.sql  issues.txt  local_exc_we.md  new.html  output.txt  output_with_dates.txt  (+24 more)
gateway/: .env.example  alembic.ini  debug_classifier.py  docker-compose.yml  dockerfile  init_db.py  pyproject.toml  readme.md  seed_prompts.py
gateway/.repo-intel/local/: graph.json  rip.sqlite3  vectors.json
gateway/docs/: api.md  mcp-connection.md  operations.md  setup.md
gateway/gateway/: config.py
gateway/gateway/cli/: __init__.py  main.py  workflow.py
gateway/gateway/core/: events.py  oauth.py  pipeline.py
gateway/gateway/core/agent/: __init__.py  llm_interface.py  memory.py  planner.py  recovery.py  runtime.py  tools.py
gateway/gateway/core/blocks/: __init__.py  agent_block.py  base.py  context_retrieve.py  data_blocks.py  filesystem.py  flow.py  fs_apply_patch.py  github_deployment.py  http.py  notify.py  prompt.py  registry.py  rip_blocks.py  terminal.py  tool.py
gateway/gateway/core/cache/: redis_store.py
gateway/gateway/core/classifier/: engine.py  models.py  patterns.py  rules.py
gateway/gateway/core/events/: __init__.py  bus.py  pipeline.py
gateway/gateway/core/executor/: circuit_breaker.py  engine.py  models.py  retry.py
gateway/gateway/core/learning/: __init__.py  feedback.py  llm_client.py  scorer_weights.py
gateway/gateway/core/llm_pool/: __init__.py  router.py
gateway/gateway/core/mcp/: context_server.py
gateway/gateway/core/memory/: conflict_detector.py  context_bridge.py  models.py  store.py
gateway/gateway/core/permissions/: __init__.py  audit.py  engine.py  models.py  roles.py
gateway/gateway/core/planner/: budget.py  engine.py  models.py  strategies.py
gateway/gateway/core/prompts/: __init__.py  manager.py  render.py  templates.py
gateway/gateway/core/ranker/: __init__.py  compressor.py  deduplicator.py  engine.py  models.py  summarizer.py
gateway/gateway/core/sources/: base.py  dynamic_mcp.py  github.py  jira.py  mcp_transport.py  models.py  registry.py  rip_client.py  slack.py  workspace_memory_source.py
gateway/gateway/core/tokenizer/: counter.py  models.py
gateway/gateway/core/workflow/: __init__.py  dag.py  engine.py  input_resolver.py  policies.py  run_state.py
gateway/gateway/core/workspace/: __init__.py  capabilities.py  context_injector.py  entities.py  goals.py  knowledge.py  knowledge_domains.py  knowledge_engine.py  knowledge_extractor.py  knowledge_lifecycle.py  knowledge_scoring.py  memory.py  privacy.py  router.py  state.py
gateway/gateway/mcp/: __init__.py  handlers.py  middleware.py  server.py  tools.py
gateway/gateway/server/: main.py  request_context.py
gateway/gateway/server/middleware/: rate_limit.py
gateway/gateway/server/routers/: __init__.py  active_project.py  agent.py  audit.py  context.py  feedback.py  health.py  metrics.py  oauth.py  sessions.py  settings.py  sources.py  validate.py  workflows.py
gateway/gateway/server/schemas/: common.py  requests.py  responses.py
gateway/gateway/storage/: audit_store.py  database.py  models.py  source_registry.py
gateway/tests/: conftest.py
gateway/tests/integration/: test_full_pipeline.py  test_mcp_server.py
gateway/tests/unit/: test_classifier.py  test_cli.py  test_compressor.py  test_deduplicator.py  test_executor.py  test_external_sources.py  test_http_server.py  test_learning.py  test_memory.py  test_permissions.py  test_planner.py  test_prompts_llm_pool.py  test_ranker.py  test_storage.py  test_tokenizer.py  test_workflow_blocks.py
(+378 files in other folders)
