[project]
name = "repo-intelligence"
version = "0.1.0"
description = "Repository Intelligence Platform (RIP) - Your codebase as a graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "annotated-doc>=0.0.3",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.8.0",
    "neo4j>=5.22.0",
    "qdrant-client>=1.10.0,<1.11.0",
    "sentence-transformers>=3.0.0",
    "optimum>=1.20.0",
    "onnxruntime>=1.18.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "redis>=5.0.7",
    "gitpython>=3.1.43",
    "watchdog>=4.0.1",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
    "scipy>=1.17.1",
    # Gateway dependencies
    "mcp>=1.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
repo = "cli.main:app"
gateway = "gateway.gateway.cli.main:app"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli", "cli.*", "core", "core.*", "server", "server.*", "mcp", "mcp.*", "gateway.gateway", "gateway.gateway.*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "gateway.tests", "gateway.tests.*"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "pyinstaller>=6.0.0",
  "build>=1.5.0",
  "twine>=6.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "tests/fixtures/sample_repos/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
