[project]
name = "context-gateway"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis[asyncio]>=5.0.0",
    
    # MCP
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    
    # ML
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    
    # LLM
    "litellm>=1.40.0",
    
    # Utilities
    "structlog>=24.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
gateway = "gateway.cli.main:app"
